fix attribute of box and increase gap

--- a/react-admin-dashboard/src/scenes/select/index.css
+++ b/react-admin-dashboard/src/scenes/select/index.css
@@ -1,10 +1,12 @@
 .header-custom {
-    margin: 5px 20px;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 
 }
 /* Chon loai hinh nhan vien */
 .custom-select {
-    margin: auto;
+    margin-top: 30px;
     position: relative;
     margin-bottom: 40px;
 
@@ -28,6 +30,7 @@
     font-size: large;
     left: 250px;
     top: -30px;
+    -webkit-text-fill-color: black;
 }
 
 /* Chon loai hinh nhan vien */
@@ -39,7 +42,8 @@
 
 }
 .box-assign{
-    margin-top: 20px;
+    margin-top: 60px;
+    
 }
 .grid-layout{
     
@@ -50,8 +54,13 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 18px solid rgba(130, 172, 214, 0.43);
-    padding: 30px;
+    border: 2px black;
+    padding-top: 0px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+
+    
   /* background: rgba(45, 73, 100, 0.2);
 
   border-radius: 16px;
@@ -61,10 +70,18 @@
   border: 1px solid rgba(130, 172, 214, 0.43); */
 }
 
+.text-attribute{
+    text-align: center;
+    font-size: xx-large;
+    color: antiquewhite;
+}
+
 /* grid-layout end */
 .mcp-and-date-container{
     position: relative;
-    margin: 60px 0px;
+    /* margin: 60px 0px; */
+    margin-top: 40px;
+    margin-bottom: 60px;
 
  
 }
@@ -82,11 +99,16 @@
 
 }
 .select-mcp{
-    color: black;
+    color: transparent;
     font-size: large;
     height: 38px;
 
     font-family: 'Source Sans Pro';
+    cursor: pointer;
+    background-color: aquamarine;
+    /* background:rgb(255, 0, 0); */
+    -webkit-text-fill-color: black;
+    
 }
 .mcp-error{
     color: red;
@@ -117,6 +139,7 @@
     font-family: cursive;
 
     font-family: 'Source Sans Pro';
+    -webkit-text-fill-color: black;
 }
 .date-error{
     color: red;
@@ -134,21 +157,23 @@
 .locate-container{
     position: absolute;
     width: 45%;
-
-}
+    color: transparent;
+}   
 
 /* locate css start*/
 .text-locate{
-    
+
     font-size: large;
     color:#07e37e;
 }
 .select-locate{
+
     color: black;
     font-size: large;
     height: 38px;
 
     font-family: 'Source Sans Pro';
+    -webkit-text-fill-color: black;
 }
 .locate-error{
     color: red;
@@ -176,6 +201,7 @@
     font-family: cursive;
 
     font-family: 'Source Sans Pro';
+    -webkit-text-fill-color: black;
 }
 .time-error{
     color: red;
@@ -198,6 +224,7 @@
     height: 38px;
 
     font-family: 'Source Sans Pro';
+    -webkit-text-fill-color: black;
 
 }
 .vehicle-error{
@@ -222,7 +249,7 @@
     height: 38px;
 
     font-family: 'Source Sans Pro';
-
+    -webkit-text-fill-color: black;
 
 }
 .collector-error{
@@ -243,6 +270,7 @@
     font-size: large;
 
     font-family: 'Source Sans Pro';
+    -webkit-text-fill-color: black;
 }
 /* note  css end*/
 
